testsuite/tests/ghc-regress/parser/should_fail/readFail035.hs

module Foo where

data Foo

